--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.1",
     "@reduxjs/toolkit": "^2.5.0",
+    "material-icons": "^1.13.13",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
